# sof

./: .cproject  .project  README.md
src/: .gitignore  Makefile.am  README  configure.ac  recompile.sh
src/Algorithm/: GapFillProcess.cpp
src/FSG/: FSGCommon.h  Makefile.am  bwt_interval.hpp  compressor.cpp  compressor.hpp  delta_interval.hpp  fsg.cpp  fsg.h  hits.hpp  hits_util.cpp  hits_util.hpp  ov_mgr.cpp  ov_mgr.hpp  parallel_util.hpp  segment.hpp  simple_bitvector.hpp  suff_mgr.hpp  vector_locker.hpp
src/SDSL/lib/pkgconfig/: libdivsufsort.pc  libdivsufsort64.pc  sdsl-lite.pc
src/SGA/: Makefile.am  SGACommon.h  indexSOF.cpp  indexSOF.h  overlap-long.cpp  sga.cpp
src/SOF/: BWT.cpp  BWT.h  BWTBySampling.cpp  BWTBySampling.h  BWTByWavelet.cpp  BWTByWavelet.h  CombinedGraph.cpp  CombinedGraph.h  CurrentRead.cpp  CurrentRead.h  EdgeContainer.cpp  EdgeContainer.h  FileWriter.cpp  FileWriter.h  GraphFromCombinedEdges.cpp  GraphFromCombinedEdges.h  LexicographicIndex.cpp  LexicographicIndex.h  Makefile.am  OperationOnBBandEE.cpp  OperationOnBBandEE.h  OperationOnBE.cpp  OperationOnBE.h  OverlapContainer.cpp  OverlapContainer.h  OverlapOperations.cpp  OverlapOperations.h  ReadOperations.cpp  ReadOperations.h  ReadsCollector.cpp  ReadsCollector.h  ReadsInfo.cpp  ReadsInfo.h  RepeatRemoval.cpp  RepeatRemoval.h  SOFCommon.h  StringGraph.cpp  StringGraph.h  StringOperations.cpp  StringOperations.h  (+3 more)
src/SuffixTools/: BWTCARopebwt.h  BWTCARopebwtRC.cpp  BWTCARopebwtRC.h  Makefile.am  Occurrence.h  RLBWT.cpp  RLBWT.h  STCommon.h  SampledSuffixArray.h  a_iqbal_test.cpp
src/Util/: ClusterReader.cpp  ReadInfoTable.cpp  ReadInfoTable.h  StdAlnTools.cpp  VariantIndex.cpp
src/config_with_SDSL/: configure.ac
